exports[`App is crossed when completed 1`] = `
<li
  className="completed todo-item">
  <FaAngleRight />
</li>
`;

exports[`App is not crossed when not completed 1`] = `
<li
  className="todo-item">
  <FaAngleRight />
</li>
`;
